css/creative.css
/*!
 * Start Bootstrap - Creative Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

html,
body {
    width: 100%;
    height: 100%;
}

body {
   font-family: 'Volkhov', serif;     
}

body.theme-1 {
   background: #fff url('../img/background.jpg') no-repeat center top fixed;
   color:#1b1b1b;
}
	body.theme-1 a {
	    color: #aaaeba;
	}
	body.theme-1 a:hover,
	body.theme-1 a:focus {
	    color: #fff;
	}
	hr {
	    border-color: #2d2e39;
	}
	.btn-primary {
		background-color: #2d2e39;
	}
	body.theme-1 #mainNav {
		border-color:#000;
		background-color:#1f1f1f;
		-webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.75);
		-moz-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.75);
		box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.75);
	}
	body.theme-1 #links, footer {
		background-color: #2d2e39;
		color:#fff;
	}	
	body.theme-1 .list-header {
		min-height:120px;
		background: #2d2e39;
		background: -moz-radial-gradient(center, ellipse cover,  #2d2e39 0%, #21222a 100%);
		background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#2d2e39), color-stop(100%,#21222a));
		background: -webkit-radial-gradient(center, ellipse cover,  #2d2e39 0%,#21222a 100%);
		background: -o-radial-gradient(center, ellipse cover,  #2d2e39 0%,#21222a 100%);
		background: -ms-radial-gradient(center, ellipse cover,  #2d2e39 0%,#21222a 100%);
		background: radial-gradient(ellipse at center,  #2d2e39 0%,#21222a 100%);
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d2e39', endColorstr='#21222a',GradientType=1 );
		border:#2E2F35 solid 1px;
		text-align:center;
		color:#fff;
		box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.75);
	}
	body.theme-1 section#newest-artwork {
  		background: #444753 url('../img/shadow.png') no-repeat center 48px;
  	}	
  	body.theme-1 section#contact {
	  	background-color: #444753;
  	}
  		body.theme-1 section#newest-artwork .container {
  			background:transparent url('../img/shadow.png') no-repeat center bottom;
  		}
		body.theme-1 .well {
			background-color:#999;
			overflow:hidden;
		}
		body.theme-1 .panel {
			background-color:#666;
		}
	

.list-header h1 {
  color:#fff;
}

	
body.theme-2 {
   background: #fff url('../img/background-2.jpg') no-repeat center top fixed;
}
body.theme-3 {
   background: #fff url('../img/background-3.jpg') no-repeat center top fixed;
}
body.theme-4 {
   background: #fff url('../img/background-4.jpg') no-repeat center top fixed;
}


hr {
    max-width: 50px;
    border-width: 3px;
}

hr.light {
    border-color: #fff;
}

a {
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}


span.logo { font-family: 'Italianno', cursive; color:#fff; font-size:7em; }

h1 { color: #1b1b1b;
    font-family: 'Italianno', cursive; }
h2,
h3,
h4,
h5,
h6 {
    color: #1b1b1b;
    font-family: 'Volkhov', serif;
}
span.list-h1 { font-size: 4em; font-family: 'Italianno', cursive; background:none; border:none;}

p {
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 1.5;
}

.bg-primary {
    background-color: #f05f40;
}

.bg-dark {
    color: #fff;
    background-color: #222;
}

.text-faded {
    color: rgba(255,255,255,.7);
}

section {
    padding: 100px 0;
}

aside {
    padding: 50px 0;
}

.no-padding {
    padding: 0;
}



.navbar-default {
    border-color: rgba(34,34,34,.05);
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    background-color: #fff;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.navbar-default .navbar-header .navbar-brand {
    text-transform: uppercase;
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
    font-weight: 700;
    color: #f05f40;
}

.navbar-default .navbar-header .navbar-brand:hover,
.navbar-default .navbar-header .navbar-brand:focus {
    color: #eb3812;
}

.navbar-default .nav > li>a,
.navbar-default .nav>li>a:focus {
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 700;
    color: #222;
}

.navbar-default .nav > li>a:hover,
.navbar-default .nav>li>a:focus:hover {
    color: #f05f40;
}

.navbar-default .nav > li.active>a,
.navbar-default .nav>li.active>a:focus {
    color: #f05f40!important;
    background-color: transparent;
}

.navbar-default .nav > li.active>a:hover,
.navbar-default .nav>li.active>a:focus:hover {
    background-color: transparent;
}

@media(min-width:768px) {
    .navbar-default {
        border-color: rgba(255,255,255,.3);
        background-color: transparent;
    }

    .navbar-default .navbar-header .navbar-brand {
        color: #666;
    }

    .navbar-default .navbar-header .navbar-brand:hover,
    .navbar-default .navbar-header .navbar-brand:focus {
        color: #1b1b1b;
    }

    .navbar-default .nav > li>a,
    .navbar-default .nav>li>a:focus {
        color: #666;
    }

    .navbar-default .nav > li>a:hover,
    .navbar-default .nav>li>a:focus:hover {
        color: #1b1b1b;
    }

    .navbar-default.affix {
        border-color: rgba(34,34,34,.05);
        background-color: #fff;
    }

    .navbar-default.affix .navbar-header .navbar-brand {
        font-size: 14px;
        color: #f05f40;
    }

    .navbar-default.affix .navbar-header .navbar-brand:hover,
    .navbar-default.affix .navbar-header .navbar-brand:focus {
        color: #eb3812;
    }

    .navbar-default.affix .nav > li>a,
    .navbar-default.affix .nav>li>a:focus {
        color: #222;
    }

    .navbar-default.affix .nav > li>a:hover,
    .navbar-default.affix .nav>li>a:focus:hover {
        color: #f05f40;
    }
}

.list-group-item {
    padding:20px 15px;
}

header {
    position: relative;
    width: 100%;
    min-height: auto;
    text-align: center;
   
}

header .header-content {
    position: relative;
    width: 100%;
    padding: 100px 15px;
    text-align: center;
}
/* ... */

